# Goodsale-Python-Test-Task

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: test.xml
src/: config.py  main.py  schemas.py
src/models/migrations/versions/: 2024_09_29_2025-2666a787ad06_initial_migration.py  2024_09_30_0231-bedbf9fc4585_create_sku_table.py
src/models/src/: models.py
src/models/src/modules/: sku.py
src/parsers/: xml_parser.py
src/services/: elasticsearch_service.py  sku_service.py
