[tool.poetry]
name = "goodsaletesttask"
version = "0.1.0"
description = ""
authors = ["Lee Constantine <lik42127@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.3.0"
sqlalchemy = "^2.0.12"
alembic = "^1.13.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
elasticsearch = "^8.15.1"
aiohttp = "^3.10.8"
pre-commit = "^3.8.0"
python-multipart = "^0.0.12"
mypy = "^1.11.2"
lxml-stubs = "^0.5.1"
isort = "^5.13.2"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
